fix: 구조 리펙토링